# 2025-01-mdls-talk

./: .gitignore  .nojekyll  index.html  splitting_imex.qmd  talk.html  talk.qmd  talk_marc.qmd
.github/workflows/: pages.yml
animations/: .gitignore  1d_mesh.py  mra_construction.py  pixi.toml  portion.py  test.py
codes/: cellarray.html  celllist.html
codes/samurai/burgers/: CMakeLists.txt  MRA_compression.cpp  lsburgers_amr.cpp  lsburgers_mra.cpp  pixi.toml
codes/samurai/burgers/python/: plot_compression.py  plot_result.py
css/: light.css
sections/: examples.qmd  splitting_imex.qmd
